--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -45,15 +45,20 @@
             android:padding="19dp"
             android:orientation="vertical"
             >
-
-            <ImageView
-                android:id="@+id/resultImageView"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:scaleType="centerCrop"
-                tools:src="@tools:sample/backgrounds/scenic"
-                android:layout_marginBottom="19dp"
-                />
+                app:cardCornerRadius="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_height="300dp">
+                <ImageView
+                    android:id="@+id/resultImageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:scaleType="centerCrop"
+                    tools:src="@tools:sample/backgrounds/scenic"
+                    android:layout_marginBottom="19dp"
+                    />
+            </androidx.cardview.widget.CardView>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
