--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -97,13 +97,14 @@
                     android:backgroundTint="@color/primary" />
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/postingButton"
                     style="@style/Widget.Material3.Button.OutlinedButton"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:layout_marginEnd="8dp"
                     app:cornerRadius="10dp"
                     android:layout_weight="1"
-                    android:text="Simpan Hasil"
+                    android:text="Posting"
                     android:textColor="@color/primary"
                     app:strokeColor="@color/primary" />
             </LinearLayout>
@@ -113,4 +114,3 @@
 
     </LinearLayout>
 </ScrollView>
-    
