--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/navigation_forum"
+        android:icon="@android:drawable/ic_menu_agenda"
+        android:title="Beranda" />
+    <item
         android:id="@+id/navigation_scan"
         android:icon="@android:drawable/ic_menu_camera"
         android:title="Scan" />
